--- a/Argentina Corn-Wheat-Oats-Rye.ipynb
+++ b/Argentina Corn-Wheat-Oats-Rye.ipynb
@@ -206,10 +206,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "148ae980",
+   "id": "1635a755",
    "metadata": {},
    "source": [
-    "**First, the widget is defined. Then, the change_function() function is called.**"
+    "# Widget\n",
+    "First, the widget is defined. Then, the change_year() function is called."
    ]
   },
   {
